---------------------------------------------------------------------------------------------------
Version: 7.1.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 7.1.2
Date: 2024-12-31
  Bugfixes:
    - Fix potential crash from conflicting window name
---------------------------------------------------------------------------------------------------
Version: 7.1.1
Date: 2024-12-28
  Features:
    - Add buttons to sort the preset list
---------------------------------------------------------------------------------------------------
Version: 7.1.0
Date: 2024-12-12
  Features:
    - Add custom hotkeys to cycle between presets (default mapped to Shift+Alt+Mouse Wheel). Only active with the inserter in hand or the config window open.
  Bugfixes:
    - Fix crash and incorrect checks around category-based module restrictions.
---------------------------------------------------------------------------------------------------
Version: 7.0.3
Date: 2024-12-04
  Changes:
    - Added Russian (ru) locale (thanks to eugenikus8)
---------------------------------------------------------------------------------------------------
Version: 7.0.2
Date: 2024-12-02
  Features:
    - Add remote interfaces for other mods to get the module config for an entity, or to activate this mod to update modules in a list of entities
---------------------------------------------------------------------------------------------------
Version: 7.0.1
Date: 2024-11-26
  Bugfixes:
    - Fix on_nth_tick handling, which was causing errors for multiplayer
---------------------------------------------------------------------------------------------------
Version: 7.0.0
Date: 2024-11-25
  Changes:
    - Updated for Factorio 2.0
    - Major rewrite of the mod. Most things are similar, but significantly reworked.
    - Updating modules in entities changed to use native blueprinting functionality