@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 7.1.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix incorrectly running module inserter when a selection tool from a different mod is used (potentially causing a crash)
 ---------------------------------------------------------------------------------------------------
 Version: 7.1.2
 Date: 2024-12-31
